# cybird-watching

./: .clang-format  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  platformio.ini
docs/: CHANGELOG_v3.0.md  CHANGE_FONT_SIZE.md  DUAL_CORE_ARCHITECTURE.md  GUIDE_TO_ADD_NEW_BIRDS.md  QUICK_START_FOR_BEGINNER.md  bird_watching_flow_diagram.md  bird_watching_test_guide.md
lib/Qmi8658c/src/: DEV_Config.h  QMI8658.cpp
resources/: README.md
resources/configs/: bird_config.csv  bird_config.json
resources/fonts/: README.md  notosanssc_12.fnt  notosanssc_16.fnt  notosanssc_18.fnt
scripts/: README_CLI_TOOLS.md  batch_convert_mp4.bat  clean.bat  cybird_cli.bat  esp32s3-debug.bat  extract_fonts.bat  init.bat  pio_run.bat  read_platformio.bat  run_convert.bat  upload_and_monitor.bat
scripts/converter/src/converter/: batch_processor.py  rgb565.py
scripts/cybird_watching_cli/: README.md  pyproject.toml
scripts/cybird_watching_cli/src/cybird_watching_cli/: main.py
scripts/mp4converter/: README.md  pyproject.toml
scripts/mp4converter/src/mp4converter/: __init__.py  batch_processor.py  chroma_key.py  converter_bridge.py  frame_processor.py  video_decoder.py  watermark_remover.py
scripts/uniq_fonts/: README.md  font_chars.txt  main.py
src/: main.cpp  main_backup.cpp
src/applications/gui/core/: events_init.c  gui_guider.c  gui_guider.h  (+3 more)
src/config/: guider_fonts.h  hardware_config.h  ui_texts.h  version.h
src/drivers/display/: display.cpp  display.h  lgfx_config.h
src/hal/: hal_manager.cpp  hal_manager.h  hardware_detector.cpp  hardware_detector.h  imu_factory.cpp  imu_interface.h  mpu6050_impl.cpp  mpu6050_impl.h  qmi8658_impl.cpp  qmi8658_impl.h  sd_interface.cpp  sd_interface.h
src/system/commands/: serial_commands.cpp  serial_commands.h
src/system/logging/: log_manager.cpp  log_manager.h
src/system/tasks/: task_manager.cpp  task_manager.h
tools/lvgl-simulator/: .gitignore  CMakeLists.txt  README.md  lv_conf.h
tools/lvgl-simulator/assets/: .gitkeep
tools/lvgl-simulator/docs/: INSTALL_CMAKE.md  INSTALL_SDL3.md  QUICK_START.md
tools/lvgl-simulator/scripts/: build_windows.bat  setup_sdl3.bat  setup_sdl3_manual.bat
tools/lvgl-simulator/src/: main.c
tools/lvgl-simulator/src/hal/: file_loader.c  file_loader.h  sdl_display.c  sdl_display.h  sdl_mouse.c  sdl_mouse.h
(+48 files in other folders)
